# python-project-lvl3

./: Makefile  README.md  pyproject.toml
page_loader/: get_request.py  get_resources.py
page_loader/names/: file_name.py
page_loader/scripts/: page_loader.py
tests/: __init__.py  test_loader.py
tests/fixtures/: html_with_local_links.html  test_html.html
