[tool.poetry]
name = "python-project-lvl3"
version = "0.1.0"
description = ""
authors = ["alex <mortauxrois@gmail.com>"]

packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pytest = "^7.1.1"
requests-mock = "^1.9.3"
bs4 = "^0.0.1"
bar = "^0.2.1"
progress = "^1.6"
python-network = "^0.0.1"
matplotlib = "3.5.1"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"
